# teensy-quencer

./: CMakeLists.txt  README.md  teensy-quencer.ino
.github/workflows/: teensy.yml  ubuntu_x64_cmake.yml
cmake/: install_arduino_library.cmake  teensyquencer.cmake.in
cmake/toolchains/: teensy41.cmake
common/: CMakeLists.txt  midireader.cpp  midireader.h  midisequenceadapter.cpp  midisequenceadapter.h  sequencer.h  songposition.h  tempo.h
examples/: CMakeLists.cmake.in  CMakeLists.txt  examples.cmake.in
examples/audioshield/: CMakeLists.txt  audioshield.ino
examples/basic/: CMakeLists.txt  README.md  basic.ino  midiread.cpp
examples/demo/: CMakeLists.txt  teensy-quencer.ino
src/: CMakeLists.linux.cmake  CMakeLists.teensy.cmake  CMakeLists.txt  Teensyquencer.h  looptype.h  midireader.cpp  midireader.h  midisequenceadapter.h  polyphonicsampler.cpp  polyphonicsampler.h  sequencer.cpp  sequencer.h  songposition.h  tempo.h
teensy_cores_x86/: mock_arduino.cpp  mock_arduino.h
teensy_cores_x86/SD/: SD.cpp
test/: CMakeLists.txt  runtests.cpp
test_x86/: CMakeLists.txt  runtests.cpp
